--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,9 @@
 version: "3"
 services:
- vampi-secure:
-  build: ./
-  container_name: vampi-secure
-  ports:
-   - 5001:5000
-  environment:
-   - vulnerable=0
-
  vampi-vulnerable:
-  build: ./
+  image: vampi_docker:latest
   container_name: vampi-vulnerable
   ports:
-   - 5002:5000
+   - 8000:5000
   environment:
    - vulnerable=1
